feat: integrate tl api

--- a/env.sample
+++ b/env.sample
@@ -1,9 +1,11 @@
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=
 NEXT_PUBLIC_SUPABASE_URL=
-POSTGRES_DATABASE="postgres
+POSTGRES_DATABASE="postgres"
 POSTGRES_HOST=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-SUPABASE_PUBLISHABLE_KEY=
-SUPABASE_SECRET_KEY=
-NEXT_PUBLIC_SUPABASE_URL=
+
+# Trustless Work (Stellar escrow)
+NEXT_PUBLIC_TRUSTLESS_WORK_API_KEY=
+NEXT_PUBLIC_TRUSTLESS_NETWORK=testnet
+NEXT_PUBLIC_MERCATO_PLATFORM_ADDRESS=
+NEXT_PUBLIC_TRUSTLESSLINE_ADDRESS=
